source/kit/stylesheets/custom/inline-edits.scss
// new inline edits
.inline-form {
    margin-bottom: 30px;
    width: 100%;

    h2, h3, h4, h5 {
        margin-bottom: 20px;
    }

    div {
        min-height: 30px;
        line-height: 30px;
    }

    label {
        font-family: inherit !important;
        text-transform: none !important;
        color: inherit !important;
        font-size: inherit !important;
        line-height: inherit !important;
        cursor: pointer;
    }

    @media (max-width: 768px) {
        & .form-group > div:first-child {
            margin-bottom: 20px;
        }
    }

    .label-container {
        max-width: 250px;
    }

    .narrow {
        @media (max-width: 768px) {
            max-width: 0px;
        }

        @media (min-width: 769px) and (max-width: 899px) {
            max-width: 50px;
        }

        @media (min-width: 900px) and (max-width: 1999px) {
            max-width: 100px;
        }

        @media (min-width: 2000px) {
            max-width: 200px;
        }
    }
}

.inline-edit-container .revert-button,
.inline-select .revert-button {
    position: relative;
    top: -2px;
    opacity: 0;
    transition: opacity 0.1s ease-in-out;
    margin-left: -20px;
    height: 20px;
    width: 20px;
    background-color: transparent;
    border: none;
    cursor: text;

    &.active {
        opacity: 1;
        cursor: pointer;
    }
}

.inline-edit-container {
    line-height: 30px;
    max-height: 30px;
    padding: 0;
    margin: 0;

    .inline-edit-disabled {
        color: $bmg-gray-lighter;
    }

    .inline-error {
        line-height: 20px;
        font-size: 12px;
        min-height: 20px;
        margin-top: -2px;
        color: $bmg-error;
        opacity: 0;
        transition: opacity 0.1s ease-in-out;
    }

    .bmg-checkbox-with-label ~ .inline-error {
        margin-top: -10px;
    }

    &.has-error {
        input, .ui-select-match {
            border-bottom-color: $bmg-error;
        }

        .inline-error {
            opacity: 1;
        }
    }

    .fa-check {
        color: $bmg-success;
    }

    .fa-spinner {
        color: $bmg-gray-dark;
    }

    .fa-remove {
        color: $bmg-error;
    }

    .inline-typeahead {
        padding-right: 40px;

        & ~ .revert-button {
            margin-left: -45px;
            opacity: 0;

            &.active {
                opacity: 1;
            }
        }

        & ~ .typeahead-hint {
            position: relative;
            top: -2px;
            margin-left: 5px;
            width: 20px;
            height: 20px;
        }
    }
}

.inline-edit-container .inline-text,
.inline-edit-container .inline-typeahead,
.inline-edit-container .inline-datepicker,
.inline-edit-container .ui-select-match,
.inline-select input {
    border-top: none;
    border-left: none;
    border-right: none;
    border-bottom: 1px solid $bmg-gray-lighter;
    transition: border-bottom-color 0.1s ease-in-out;
    border-top: 1px solid transparent;
    padding: 0px 20px 0px 0px;
    position: relative;
    top: -2px;
    display: inline-block;
    width: 100%;
    max-height: 30px !important;
    height: 30px;
    font-weight: 600;

    &:focus {
        border-bottom-color: $bmg-malibu;
    }

    &:invalid {
        border-bottom-color: $bmg-error;
    }
}

.inline-edit-container .ui-select-match {
    top: -1px !important;
}

.inline-select div[role=option].active {
    background-color: rgb(246, 246, 246);
}

.inline-edit-container .inline-datepicker {
    & ~ .calendar-button {
        padding: 0px;
        width: 20px;
        height: 20px;
        margin-left: 5px;
        position: relative;
        top: -2px;
        background-color: transparent;
        border: none;
    }

    & ~ .revert-button {
        width: 20px;
        height: 20px;
        margin-left: -45px;
        position: relative;
        top: -2px;
        opacity: 0;
        transition: opacity 0.1s ease-in-out;

        &.active {
            opacity: 1;
        }
    }
}

.inline-edit-container .ui-select-match,
.inline-select input {
    top: 0px;
}

.inline-edit-container .ui-select-match {
    cursor: pointer;
}

.inline-edit-container .bmg-checkbox-with-label {
    line-height: 18px !important;
    padding: 5px 20px 0 0;
    margin: 0;
    position: relative;
    top: -2px;
    display: inline-block;

    .bmg-checkbox {
        line-height: 18px !important;
        min-height: 18px;

        label > div {
            min-height: 18px;
        }
    }

    & ~ .success-indicator {
        position: relative;
        top: -11px;
        opacity: 0;
        border: none;
        background-color: transparent;
        width: 20px;
        height: 20px;
        transition: opacity 0.1s ease-in-out;

        &.active {
            opacity: 1;
        }
    }
}

.inline-select {
    .revert-button {
        position: relative;
        top: -2px;
        margin-left: 0;
        width: 20px;
        height: 20px;
        margin-left: -40px;
        cursor: pointer;

        .success-indicator {
            transition: opacity 0.1s ease-in-out;

            &.clear-button {
                color: $bmg-gray-dark;
                font-size: smaller;
            }
        }
    }

    .selectize-input.focus .revert-button {
        cursor: text;
    }

    .dropdown-hint {
        position: relative;
        top: -2px;
        margin-left: 0;
        text-align: right;
        padding-right: 5px;
        width: 20px;
        height: 20px;
        margin-left: 0px;
        cursor: pointer;
    }

    .ui-select-choices-row {
        background-color: $bmg-white;
        cursor: pointer;
        padding: 3px 20px;

        &:hover {
            background-color: rgb(246, 246, 246);
        }
    }

    .ui-select-choices-content {
        padding: 5px 0;
        background-color: $bmg-white;
        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
        border: 1px solid rgba(76, 76, 76, 0.15);
    }
}

.uib-datepicker-popup {
    padding-bottom: 10px !important;
}

.uib-datepicker-popup.dropdown-menu {
    z-index: 1030;
}

